# Automatic-Youtube-Downloader

./: .gitignore  .travis.yml  AYD.py  README.md  Setup.py  StartAutomaticYoutubeDownloader.py  frontend.py  main.py  pyproject.toml  requirements.txt  setup.py  trayIcon.py
Automatic-Youtube-Downloader/: AYD.py  frontend.py  main.py
Automatic-Youtube-Downloader/ffmpeg/doc/: ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg.html  ffprobe-all.html  general.html  git-howto.html  libavcodec.html  libavdevice.html  libswresample.html  libswscale.html  platform.html
Automatic-Youtube-Downloader/flask/: indexFunctions.py
Automatic-Youtube-Downloader/flask/templates/: channels.html  channelsTable.html  config.html  configTable.html  index.html  left-sidebar.html  right-sidebar.html  statusLabel.html
ffmpeg/: README.txt
ffmpeg/doc/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffplay-all.html  ffplay.html  ffprobe.html  libavfilter.html  libavformat.html  libavutil.html  mailing-list-faq.html  nut.html
flask/: frontend.py
flask/templates/: downloaderList.html  index.html  no-sidebar.html
poetry/: get_poetry.py
tests/: setupTestTravis.txt  test_parseFormat.py
